# compare_flexbe_ws

./: .gitignore  ScreenCamera_2025-12-10-20-12-18.json  ros2_jazzy_flexbe_setup_ubuntu24.md  scene_from_ucn.npy
install/: setup.bash  setup.ps1  setup.sh  setup.zsh
install/gpd_ros/share/gpd_ros/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/gpd_ros/share/gpd_ros/cmake/: ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_targets-extras.cmake  export_gpd_ros__rosidl_generator_pyExport-noconfig.cmake  export_gpd_ros__rosidl_generator_pyExport.cmake  export_gpd_ros__rosidl_typesupport_fastrtps_cExport.cmake  export_gpd_ros__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  export_gpd_ros__rosidl_typesupport_fastrtps_cppExport.cmake  gpd_rosConfig.cmake  gpd_ros__rosidl_typesupport_cExport-noconfig.cmake  gpd_ros__rosidl_typesupport_cppExport-noconfig.cmake  gpd_ros__rosidl_typesupport_introspection_cExport.cmake  gpd_ros__rosidl_typesupport_introspection_cppExport-noconfig.cmake  gpd_ros__rosidl_typesupport_introspection_cppExport.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
install/gpd_ros/share/gpd_ros/msg/: CloudIndexed.json  CloudSamples.json  CloudSources.idl  GraspConfig.idl  GraspConfig.json  GraspConfigList.idl
install/gpd_ros/share/gpd_ros/srv/: ComputeGraspPoses.idl  ComputeGraspPoses.json  ComputeGraspPoses.srv
install/panda_gazebo/share/panda_gazebo/: local_setup.dsv  local_setup.sh  package.xml
install/panda_gazebo/share/panda_gazebo/cmake/: panda_gazeboConfig.cmake
install/panda_gazebo/share/panda_gazebo/config/: panda_bridge.yaml
install/panda_gazebo/share/panda_gazebo/environment/: panda_gazebo.dsv
install/panda_gazebo/share/panda_gazebo/launch/: panda_gazebo_move_group.launch.py
install/panda_gazebo/share/panda_gazebo/models/panda/: model.config  model.sdf
install/panda_gazebo/share/panda_gazebo/models/table/: model.config
install/panda_gazebo/share/panda_gazebo/worlds/: panda.sdf
log/: latest_build
readMe/: apt_dep_humble.txt  apt_dep_ubuntu.txt  note_compile  requirements.txt  ros2_jazzy_flexbe_setup_ubuntu24.md
(+869 files in other folders)
