<?xml version="1.0"?>
<package format="3">
  <name>gpd_ros</name>
  <version>0.0.1</version>
  <description>ROS 2 interface mirror of GPD (messages/services only, no nodes)</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>BSD-3-Clause</license>

  <!-- system libs -->
  <!-- <depend>pcl</depend> -->
  <depend>eigen</depend>

  <!-- Message deps: include every package referenced in your .msg/.srv fields -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>pcl_msgs</depend>
  <depend>tf2_eigen</depend>
  <!-- <depend>opencv</depend> -->

  <!-- helpers for finding Eigen via CMake (keep these if you use them) -->
  <build_depend>eigen3_cmake_module</build_depend>
  <build_export_depend>eigen3_cmake_module</build_export_depend>
  <exec_depend>eigen3_cmake_module</exec_depend>

  <!-- generated types -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- Mark as an interface package so tools can discover it -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>